--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
-certifi==2020.4.5.1
-chardet==3.0.4
-chromedriver-py==81.0.4044.69
-colorama==0.4.3
+certifi==2020.12.5
+chardet==4.0.0
+chromedriver-py==88.0.4324.27
+click==7.1.2
+colorama==0.4.4
 darkdetect==0.1.1
-idna==2.9
-Js2Py==0.68
-lxml==4.5.0
+Flask==1.1.2
+idna==2.10
+inflect==5.0.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Js2Py==0.70
+lxml==4.6.2
+MarkupSafe==1.1.1
+numpy==1.19.4
+pandas==1.2.0
+pycryptodomex==3.9.9
 pyjsparser==2.7.1
-PyQt5==5.14.2
-PyQt5-sip==12.7.2
-pytz==2019.3
-requests==2.23.0
+PyJWT==2.0.0
+PyQt5==5.15.2
+PyQt5-sip==12.8.1
+python-dateutil==2.8.1
+pytz==2020.5
+requests==2.25.1
 selenium==3.141.0
-six==1.14.0
-tzlocal==2.0.0
-urllib3==1.25.9
+six==1.15.0
+twilio==6.50.1
+tzlocal==2.1
+urllib3==1.26.2
+Werkzeug==1.0.1
 wincertstore==0.2
-Flask~=1.1.2
-twilio~=6.40.0
